--- a/ETicaret.Net8/Views/Category/Create.cshtml
+++ b/ETicaret.Net8/Views/Category/Create.cshtml
@@ -15,6 +15,7 @@
         <div class="mb-3">
             <label asp-for="DisplayOrder" class="form-label"></label>
             <input type="text" class="form-control" asp-for="DisplayOrder" />
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
         <div class="row">
             <div class="col-md-3 px-3">
