--- a/ETicaret.Net8/Views/Category/Edit.cshtml
+++ b/ETicaret.Net8/Views/Category/Edit.cshtml
@@ -2,16 +2,17 @@
 
 
 <form method="post">
+    <input asp-for="Id" type="hidden" />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-dark">Yeni Kategori Ekle</h2>
+            <h2 class="text-dark">Kategori Güncelle</h2>
             <hr />
         </div>
         <div asp-validation-summary="All"></div>
         <div class="mb-3">
             <label asp-for="Name" class="form-label"></label>
             <input type="text" class="form-control" asp-for="Name" />
-            <span asp-validation-for="Name" class="text-danger" ></span>
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="mb-3">
             <label asp-for="DisplayOrder" class="form-label"></label>
@@ -20,13 +21,13 @@
         </div>
         <div class="row">
             <div class="col-md-3 px-3">
-                <button class="btn btn-outline-dark px-4 mt-3" type="submit">Yeni Kategori Ekle</button>
+                <button class="btn btn-outline-dark px-4 mt-3" type="submit">Kategori Güncelle</button>
             </div>
             <div class="col-md-3 px-3">
                 <a class="btn btn-outline-secondary px-4 mt-3 mx-3" asp-area="" asp-controller="Category" asp-action="Index">Anasayfa Geri Dön</a>
             </div>
         </div>
-       
-      
+
+
     </div>
 </form>
