--- a/ETicaret.Net8/Views/Category/Index.cshtml
+++ b/ETicaret.Net8/Views/Category/Index.cshtml
@@ -11,12 +11,14 @@
     </div>
 </div>
  
-<table class="table table-bordered table-striped py-4">
+<table class="table table-hover table-bordered table-striped py-4">
    <thead>
        <tr>
            <th>Id</th>
            <th>Name</th>
            <th>DisplayOrder</th>
+           <th></th>
+           <th></th>
        </tr>
    </thead>
    <tbody>
@@ -26,6 +28,14 @@
                 <td>@item.Id</td>
                 <td>@item.Name</td>
                 <td>@item.DisplayOrder</td>
+                <td>
+                    <div class="w-75 btn-group role=group">
+                        <a class="btn btn-outline-primary mx-3" asp-area="" asp-controller="Category" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square mx-2"></i>Kategori Düzenle</a>
+                        <a class="btn btn-outline-danger mx-3" asp-area="" asp-controller="Category" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash mx-2"></i>Kategori Kaldır</a>
+
+                    </div>
+                </td>
+           
             </tr>
         }
     </tbody>
