--- a/ETicaret.Net8/Views/Shared/Toastr.cshtml
+++ b/ETicaret.Net8/Views/Shared/Toastr.cshtml
@@ -6,3 +6,11 @@
         toastr.success('@TempData["basarili"]');   
     </script>
 }
+else if (TempData["basarisiz"] !=null)
+{
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/toastr.min.js"></script>
+    <script type="text/javascript">
+        toastr.error('@TempData["basarisiz"]')    
+    </script>
+}
