--- a/ETicaret.Net8/Areas/Admin/Views/Category/Delete.cshtml
+++ b/ETicaret.Net8/Areas/Admin/Views/Category/Delete.cshtml
@@ -24,7 +24,7 @@
                 <button class="btn btn-outline-danger px-4 mt-3" type="submit">Kategori Kaldır</button>
             </div>
             <div class="col-md-3 px-3">
-                <a class="btn btn-outline-secondary px-4 mt-3 mx-3" asp-area="" asp-controller="Category" asp-action="Index">Anasayfa Geri Dön</a>
+                <a class="btn btn-outline-secondary px-4 mt-3 mx-3" asp-area="Admin" asp-controller="Category" asp-action="Index">Anasayfa Geri Dön</a>
             </div>
         </div>
 
