--- a/ETicaret.Net8/Views/Shared/_Layout.cshtml
+++ b/ETicaret.Net8/Views/Shared/_Layout.cshtml
@@ -4,16 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ETicaret.Net8</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" /> @*Burayı değiştirdim boostrap.min.cssdan değiştirdim*@
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrapmn.css" /> @*Burayı değiştirdim boostrap.min.cssdan değiştirdim (flaty)*@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="~/ETicaret.Net8.styles.css" asp-append-version="true" />
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
-</head>
+   </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark  text-light  bg-dark border-bottom box-shadow pb-3 mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark  text-light  bg-primary border-bottom box-shadow pb-3 mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand text-light mx-2" asp-area="" asp-controller="Home" asp-action="Index"><i class="heading bi bi-cart4 mx-1"></i> E-SepetToptanSatış.com</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -22,11 +22,11 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link mx-3" asp-area="" asp-controller="Home" asp-action="Index">ANASAYFA</a>
+                        <li class="nav-item ss">
+                            <a class="nav-link mx-3" asp-area="Customer" asp-controller="Home" asp-action="Index">ANASAYFA</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link mx-3" asp-area="" asp-controller="Category" asp-action="Index">KATEGORİLER</a>
+                        <li class="nav-item ss">
+                            <a class="nav-link mx-3" asp-area="Admin" asp-controller="Category" asp-action="Index">KATEGORİLER</a>
                         </li>
                     </ul>
                 </div>
