--- a/ETicaret.Net8/Areas/Admin/Views/Category/Index.cshtml
+++ b/ETicaret.Net8/Areas/Admin/Views/Category/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Category>
+﻿@using ETicaret.Net8.Models
+@model IEnumerable<Category>
 
 <div class="container py-4">
     <div class="row pt-4">
