DataTable added after rich text editor

--- a/ETicaret.Net8/Views/Shared/_Layout.cshtml
+++ b/ETicaret.Net8/Views/Shared/_Layout.cshtml
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="~/ETicaret.Net8.styles.css" asp-append-version="true" />
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
+    <link rel="stylesheet" href="//cdn.datatables.net/1.11.2/css/jquery.dataTables.min.css" />
+
+    
+
    </head>
 <body>
     <header>
@@ -62,6 +66,7 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.tiny.cloud/1/7y8m78izvhgh7j1c7cuuazcew6lx578qkfk7jzr8mgyj24x7/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script> @* Buraya ekledim *@
+    <script src="//cdn.datatables.net/1.11.2/js/jquery.dataTables.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
