--- a/ETicaret.Net8/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ETicaret.Net8/Areas/Admin/Views/Product/Edit.cshtml
@@ -70,10 +70,10 @@
         </div>
         <div class="row">
             <div class="col-md-3 px-3">
-                <button class="btn btn-outline-dark px-4 mt-3" type="submit">Ürün Güncelle</button>
+                <button class="btn  btn-outline-primary px-3 mt-3" type="submit">Ürün Güncelle</button>
             </div>
             <div class="col-md-3 px-3">
-                <a class="btn btn-outline-secondary px-4 mt-3 mx-3" asp-area="Admin" asp-controller="Product" asp-action="Index">Anasayfa Geri Dön</a>
+                <a class="btn btn-outline-dark px-1 mt-3 mx-3" asp-area="Admin" asp-controller="Product" asp-action="Index">Anasayfa Geri Dön</a>
             </div>
         </div>
 
