--- a/ETicaret.Net8/Areas/Admin/Views/Product/Index.cshtml
+++ b/ETicaret.Net8/Areas/Admin/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     @if(Model !=null && Model.Any())
     {
-        <table class="table table-hover table-bordered table-striped py-4" width="%100">
+        <table id="tblData" class="table table-hover table-bordered table-striped py-4" width="%100">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -22,13 +22,11 @@
                     <th>ISBN</th>
                     <th>Author</th>
                     <th>ListPrice</th>
-                    <th>Price</th>
-                    
-                    <th>CategoryId</th>
-                    <th>ImageUrl</th>
+                    <th>Category</th>
+                    <th></th>
                 </tr>
             </thead>
-            <tbody>
+          @*   <tbody>
                 @foreach (var item in Model.OrderBy(x=>x.Price))
                 {
                     <tr>
@@ -40,21 +38,21 @@
                         <td>@item.ListPrice</td>
                         <td>@item.Price</td>
                         
-                        <td></td>
+                        <td>@item.Categories.Name</td>
                         <td>
                             <img style="object-fit:cover;" src="@item.ImageUrl" width="100" height="70" alt="Alternate Text" />
                         </td>
                         <td>
                             <div class="w-75 btn-group role=group">
-                                <a class="btn btn-outline-dark mx-3" asp-area="Admin" asp-controller="Product" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square mx-2"></i>Ürünü Düzenle</a>
-                                <a class="btn btn-outline-danger mx-3" asp-area="Admin" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash mx-2"></i>Ürünü Kaldır</a>
+                                <a class="btn btn-sm btn-outline-dark mx-3" asp-area="Admin" asp-controller="Product" asp-action="Edit" asp-route-id="@item.Id"><i class="bi bi-pencil-square mx-2"></i>Ürünü Düzenle</a>
+                                <a class="btn btn-sm btn-outline-danger mx-3" asp-area="Admin" asp-controller="Product" asp-action="Delete" asp-route-id="@item.Id"><i class="bi bi-trash mx-2"></i>Ürünü Kaldır</a>
 
                             </div>
                         </td>
 
                     </tr>
                 }
-            </tbody>
+            </tbody> *@
         </table>
     }
     else
@@ -62,3 +60,8 @@
         <h3 class="text-danger">veri yok..</h3>
     }
 </div>
+
+
+@section Scripts{
+    <script src="~/js/Product.js" ></script>
+}
