--- a/ETicaret.Net8/Areas/Admin/Views/Product/Index.cshtml
+++ b/ETicaret.Net8/Areas/Admin/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
     </div>
     @if(Model !=null && Model.Any())
     {
-        <table id="tblData" class="table table-hover table-bordered table-striped py-4" width="%100">
+        <table id="tbl" class="table table-hover table-bordered table-striped py-4" width="%100">
             <thead>
                 <tr>
                     <th>Id</th>
@@ -24,6 +24,7 @@
                     <th>ListPrice</th>
                     <th>Category</th>
                     <th></th>
+                
                 </tr>
             </thead>
           @*   <tbody>
